--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.38.3",
     "docx": "^9.6.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.2.0",
