--- a/package.json
+++ b/package.json
@@ -4,23 +4,20 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "pages:build": "npx @cloudflare/next-on-pages",
-    "preview": "npm run pages:build && wrangler pages dev",
-    "deploy": "npm run pages:build && wrangler pages deploy"
+    "build": "npx @cloudflare/next-on-pages",
+    "start": "next start"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.38.3",
     "docx": "^9.6.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.2.0",
-    "next": "16.1.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "next": "15.2.3",
+    "react": "^19",
+    "react-dom": "^19"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1",
+    "@cloudflare/next-on-pages": "1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
