--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "applywell",
   "version": "0.1.0",
   "private": true,
-"scripts": 
-{
-  "dev": "next dev",
-  "build": "next build",
-  "start": "next start",
-  "lint": "next lint"
-}
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
     "@clerk/nextjs": "^6.38.3",
     "docx": "^9.6.0",
@@ -22,8 +21,8 @@
     "@cloudflare/next-on-pages": "1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "tailwindcss": "^4",
     "typescript": "^5",
     "wrangler": "^3"
