--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build": "npx @cloudflare/next-on-pages",
+    "start": "next start"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.38.3",
@@ -14,15 +13,15 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^4.2.0",
     "next": "15.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^19",
+    "react-dom": "^19"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "tailwindcss": "^4",
     "typescript": "^5",
     "wrangler": "^3"
