--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "docx": "^9.6.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.2.0",
-    "next": "15.2.3",
+    "next": "^15.2.8",
     "react": "^19",
     "react-dom": "^19"
   },
